test/corpus/comments.txt
================================================================================
Short comment
================================================================================
-- this is a comment
local x = 1
--------------------------------------------------------------------------------
(source_file
  (comment)
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Long comment level 0
================================================================================
--[[
  this is a long comment
]]
local x = 1
--------------------------------------------------------------------------------
(source_file
  (comment)
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Long comment level 2
================================================================================
--[==[
  this is a long comment
]==]
local x = 1
--------------------------------------------------------------------------------
(source_file
  (comment)
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))
