test/corpus/expressions.txt
================================================================================
Binary addition
================================================================================
local x = 1 + 2
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (binary_expression
              (exp
                (numeral))
              (exp
                (numeral)))))))))

================================================================================
Binary concat
================================================================================
local s = "a" .. "b"
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (binary_expression
              (exp
                (string
                  (short_string)))
              (exp
                (string
                  (short_string))))))))))

================================================================================
Unary negation
================================================================================
local x = -1
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (unary_expression
              (exp
                (numeral)))))))))

================================================================================
Unary not
================================================================================
local x = not true
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (unary_expression
              (exp
                (boolean)))))))))

================================================================================
Unary length
================================================================================
local x = #"hello"
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (unary_expression
              (exp
                (string
                  (short_string))))))))))

================================================================================
Parenthesized expression
================================================================================
local x = (1 + 2) * 3
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (binary_expression
              (exp
                (prefixexp
                  (exp
                    (binary_expression
                      (exp
                        (numeral))
                      (exp
                        (numeral))))))
              (exp
                (numeral)))))))))

================================================================================
Field access
================================================================================
local x = t.field
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (prefixexp
              (prefixexp
                (Name))
              (Name))))))))

================================================================================
Index access
================================================================================
local x = t[1]
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (prefixexp
              (prefixexp
                (Name))
              (exp
                (numeral)))))))))

================================================================================
Table constructor empty
================================================================================
local t = {}
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (tableconstructor)))))))

================================================================================
Table constructor array style
================================================================================
local t = { 1, 2, 3 }
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (tableconstructor
              (fieldlist
                (field
                  (exp
                    (numeral)))
                (fieldsep)
                (field
                  (exp
                    (numeral)))
                (fieldsep)
                (field
                  (exp
                    (numeral)))))))))))

================================================================================
Table constructor record style
================================================================================
local t = { x = 1, y = 2 }
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (tableconstructor
              (fieldlist
                (field
                  (Name)
                  (exp
                    (numeral)))
                (fieldsep)
                (field
                  (Name)
                  (exp
                    (numeral)))))))))))

================================================================================
Anonymous function
================================================================================
local f = function(x) return x end
--------------------------------------------------------------------------------

(source_file
  (block
    (stat
      (local_decl
        (attnamelist
          (Name))
        (explist
          (exp
            (functiondef
              (funcbody
                (parlist
                  (namelist
                    (Name)))
                (block
                  (retstat
                    (explist
                      (exp
                        (prefixexp
                          (Name))))))))))))))
