test/corpus/literals.txt
================================================================================
Nil literal
================================================================================
local x = nil
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (nil)))))))

================================================================================
Boolean true
================================================================================
local x = true
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (boolean)))))))

================================================================================
Boolean false
================================================================================
local x = false
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (boolean)))))))

================================================================================
Integer literal
================================================================================
local x = 42
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Hex integer literal
================================================================================
local x = 0xff
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Decimal float literal
================================================================================
local x = 3.14
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Float with exponent
================================================================================
local x = 3.14e-2
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Hex float literal
================================================================================
local x = 0xA23p-4
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (numeral)))))))

================================================================================
Double quoted string
================================================================================
local s = "hello"
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (string (short_string))))))))

================================================================================
Single quoted string
================================================================================
local s = 'hello'
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (string (short_string))))))))

================================================================================
String with escape sequence
================================================================================
local s = "hello\nworld"
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (string (short_string (escape_sequence)))))))))

================================================================================
Long string level 0
================================================================================
local s = [[hello]]
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (string (long_string))))))))

================================================================================
Long string level 2
================================================================================
local s = [==[hello]==]
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_decl
        (attnamelist (Name))
        (explist (exp (string (long_string))))))))

================================================================================
Vararg literal
================================================================================
local function f(...)
  return ...
end
--------------------------------------------------------------------------------
(source_file
  (block
    (stat
      (local_function
        (Name)
        (funcbody
          (parlist (varargparam (vararg)))
          (block
            (retstat
              (explist (exp (vararg))))))))))
