test/corpus/statements.txt
================================================================================
Empty statement
================================================================================
;
--------------------------------------------------------------------------------

(source_file
  (block
    (empty_stat)))

================================================================================
Simple assignment
================================================================================
x = 1
--------------------------------------------------------------------------------

(source_file
  (block
    (assignment
      (varlist
        (primary
          (Name)))
      (explist
        (numeral)))))

================================================================================
Multi assignment
================================================================================
x, y = 1, 2
--------------------------------------------------------------------------------

(source_file
  (block
    (assignment
      (varlist
        (primary
          (Name))
        (primary
          (Name)))
      (explist
        (numeral)
        (numeral)))))

================================================================================
Local declaration
================================================================================
local x = 1
--------------------------------------------------------------------------------

(source_file
  (block
    (local_decl
      (attnamelist
        (Name))
      (explist
        (numeral)))))

================================================================================
Local declaration with attribute
================================================================================
local x <const> = 1
--------------------------------------------------------------------------------

(source_file
  (block
    (local_decl
      (attnamelist
        (Name)
        (attrib
          (Name)))
      (explist
        (numeral)))))

================================================================================
Global declaration
================================================================================
global x = 1
--------------------------------------------------------------------------------

(source_file
  (block
    (global_decl
      (attnamelist
        (Name))
      (explist
        (numeral)))))

================================================================================
Do block
================================================================================
do
  local x = 1
end
--------------------------------------------------------------------------------

(source_file
  (block
    (do_stat
      (block
        (local_decl
          (attnamelist
            (Name))
          (explist
            (numeral)))))))

================================================================================
While loop
================================================================================
while true do
  print()
end
--------------------------------------------------------------------------------

(source_file
  (block
    (while_stat
      (boolean)
      (block
        (call_stat
          (primary
            (Name))
          (args))))))

================================================================================
Repeat until
================================================================================
repeat
  x = x + 1
until x > 10
--------------------------------------------------------------------------------

(source_file
  (block
    (repeat_stat
      (block
        (assignment
          (varlist
            (primary
              (Name)))
          (explist
            (binary_expression
              (primary
                (Name))
              (numeral)))))
      (binary_expression
        (primary
          (Name))
        (numeral)))))

================================================================================
If statement
================================================================================
if true then
  print()
end
--------------------------------------------------------------------------------

(source_file
  (block
    (if_stat
      (boolean)
      (block
        (call_stat
          (primary
            (Name))
          (args))))))

================================================================================
If elseif else
================================================================================
if x then
  a()
elseif y then
  b()
else
  c()
end
--------------------------------------------------------------------------------

(source_file
  (block
    (if_stat
      (primary
        (Name))
      (block
        (call_stat
          (primary
            (Name))
          (args)))
      (elseif_clause
        (primary
          (Name))
        (block
          (call_stat
            (primary
              (Name))
            (args))))
      (else_clause
        (block
          (call_stat
            (primary
              (Name))
            (args)))))))

================================================================================
Numeric for
================================================================================
for i = 1, 10 do
  print(i)
end
--------------------------------------------------------------------------------

(source_file
  (block
    (numeric_for
      (Name)
      (numeral)
      (numeral)
      (block
        (call_stat
          (primary
            (Name))
          (args
            (explist
              (primary
                (Name)))))))))

================================================================================
Numeric for with step
================================================================================
for i = 10, 1, -1 do end
--------------------------------------------------------------------------------

(source_file
  (block
    (numeric_for
      (Name)
      (numeral)
      (numeral)
      (unary_expression
        (numeral)))))

================================================================================
Generic for
================================================================================
for k, v in pairs({}) do end
--------------------------------------------------------------------------------

(source_file
  (block
    (generic_for
      (namelist
        (Name)
        (Name))
      (explist
        (primary
          (primary
            (Name))
          (args
            (explist
              (tableconstructor))))))))

================================================================================
Break statement
================================================================================
for i = 1, 10 do
  break
end
--------------------------------------------------------------------------------

(source_file
  (block
    (numeric_for
      (Name)
      (numeral)
      (numeral)
      (block
        (break_stat)))))

================================================================================
Goto and label
================================================================================
goto skip
::skip::
--------------------------------------------------------------------------------

(source_file
  (block
    (goto_stat
      (Name))
    (label
      (Name))))

================================================================================
Return statement
================================================================================
return 1, 2, 3
--------------------------------------------------------------------------------

(source_file
  (block
    (retstat
      (explist
        (numeral)
        (numeral)
        (numeral)))))
